--- a/charts/opdom/templates/server-secret.yaml
+++ b/charts/opdom/templates/server-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "opdom.serverName" . }}
+  name: {{ include "opdom.name" . }}
   labels:
     {{- include "opdom.labels" . | nindent 4 }}
     app.kubernetes.io/component: server
@@ -10,14 +10,14 @@ stringData:
   config.json: |
     {
       "global": {
-        "secret_key": {{ required "a jwt signing key is required" .Values.server.secretKey | quote }}
+        "secret_key": {{ required "a jwt signing key is required" .Values.app.secretKey | quote }}
       },
       "database": {
-        "user": {{ .Values.db.username | default "opdom" | quote }},
-        "pass": {{ .Values.db.password | default "opdom" | quote }},
-        "host": {{ .Values.db.hostname | default "opdom-db.local" | quote }},
-        "port": {{ .Values.db.port | default "3306" | quote }},
-        "name": {{ .Values.db.name | default "opdom" | quote }},
+        "user": {{ .Values.app.dbConnection.username | quote }},
+        "pass": {{ .Values.app.dbConnection.password | quote }},
+        "host": {{ .Values.app.dbConnection.hostname | quote }},
+        "port": {{ .Values.app.dbConnection.port | quote }},
+        "name": {{ .Values.app.dbConnection.name | quote }},
       },
       "github": {
         "client_id": {{ .Values.github.clientId | quote }},
