--- a/charts/opdom/templates/server-service.yaml
+++ b/charts/opdom/templates/server-service.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "opdom.serverName" . }}
+  name: {{ include "opdom.name" . }}
   labels:
     {{- include "opdom.labels" . | nindent 4 }}
     app.kubernetes.io/component: server
 spec:
-  type: {{ .Values.server.service.type }}
+  type: {{ .Values.app.service.type }}
   selector:
     {{- include "opdom.selectorLabels" . | nindent 4 }}
     app.kubernetes.io/component: server
   ports:
-    - port: {{ .Values.server.service.port }}
+    - port: {{ .Values.app.service.port }}
       targetPort: http
       protocol: TCP
       name: http
