--- a/charts/opdom/templates/tests/test-connection.yaml
+++ b/charts/opdom/templates/tests/test-connection.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "opdom.name" . }}-test-connection"
+  name: "{{ .Values.app.name }}-test-connection"
   labels:
     {{- include "opdom.labels" . | nindent 4 }}
   annotations:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "opdom.hostname" . }}:{{ .Values.app.service.port }}']
+      args: ['{{ .Values.app.hostname }}:{{ .Values.app.service.port }}']
   restartPolicy: Never
