--- a/charts/opdom/templates/server-service.yaml
+++ b/charts/opdom/templates/server-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "opdom.name" . }}
+  name: {{ (.Values.app).name }}
   labels:
     {{- include "opdom.labels" . | nindent 4 }}
     app.kubernetes.io/component: server
