fix typo in json config
Signed-off-by: matttrach <matttrach@gmail.com>

--- a/charts/opdom/templates/server-secret.yaml
+++ b/charts/opdom/templates/server-secret.yaml
@@ -17,7 +17,7 @@ stringData:
         "pass": {{ .Values.app.dbConnection.password | quote }},
         "host": {{ .Values.app.dbConnection.hostname | quote }},
         "port": {{ .Values.app.dbConnection.port | quote }},
-        "name": {{ .Values.app.dbConnection.name | quote }},
+        "name": {{ .Values.app.dbConnection.name | quote }}
       },
       "github": {
         "client_id": {{ .Values.github.clientId | quote }},
