fix dbconnection host name template
Signed-off-by: matttrach <matttrach@gmail.com>

--- a/charts/opdom/templates/server-secret.yaml
+++ b/charts/opdom/templates/server-secret.yaml
@@ -15,7 +15,7 @@ stringData:
       "database": {
         "user": {{ .Values.app.dbConnection.username | quote }},
         "pass": {{ .Values.app.dbConnection.password | quote }},
-        "host": {{ .Values.app.dbConnection.hostname | quote }},
+        "host": {{ .Values.app.dbConnection.host | quote }},
         "port": {{ .Values.app.dbConnection.port | quote }},
         "name": {{ .Values.app.dbConnection.name | quote }}
       },
