--- a/charts/opdom/templates/server-secret.yaml
+++ b/charts/opdom/templates/server-secret.yaml
@@ -24,6 +24,6 @@ stringData:
         "client_secret": {{ .Values.github.clientSecret | quote }}
       },
       "http": {
-        "port": "80"
+        "port": {{ .Values.app.port | quote }}
       }
     }
