adding hostname value to config and downgrading ingress
Signed-off-by: matttrach <matttrach@gmail.com>

--- a/charts/opdom/templates/server-secret.yaml
+++ b/charts/opdom/templates/server-secret.yaml
@@ -25,5 +25,6 @@ stringData:
       },
       "http": {
         "port": {{ .Values.app.port | quote }}
+        "host": {{ .Values.app.hostname | quote }}
       }
     }
