--- a/charts/opdom/templates/ingress.yaml
+++ b/charts/opdom/templates/ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.ingress.enabled -}}
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ .Values.app.hostname }}
@@ -30,10 +30,8 @@ spec:
           - path: {{ .path }}
             pathType: {{ .pathType }}
             backend:
-              service:
-                name: {{ $.Values.app.name }}
-                port:
-                  number: {{ $.Values.app.service.port }}
+              serviceName: {{ $.Values.app.name }}
+              servicePort: {{ $.Values.app.service.port }}
           {{- end }}
     {{- end }}
 {{- end }}
