--- a/charts/opdom/templates/ingress.yaml
+++ b/charts/opdom/templates/ingress.yaml
@@ -32,7 +32,7 @@ spec:
         paths:
           {{- range .paths }}
           - path: {{ .path }}
-            {{- if or (.Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress") (not (.Capabilities.APIVersions.Has "networking.k8s.io/v1beta1/Ingress")) }}
+            {{- if or ($.Capabilities.APIVersions.Has "networking.k8s.io/v1/Ingress") (not ($.Capabilities.APIVersions.Has "networking.k8s.io/v1beta1/Ingress")) }}
             pathType: {{ .pathType }}
             {{- end }}
             backend:
