Fix missing comma.

--- a/charts/opdom/templates/server-secret.yaml
+++ b/charts/opdom/templates/server-secret.yaml
@@ -24,7 +24,7 @@ stringData:
         "client_secret": {{ .Values.github.clientSecret | quote }}
       },
       "http": {
-        "port": {{ .Values.app.port | quote }}
+        "port": {{ .Values.app.port | quote }},
         "host": {{ .Values.app.hostname | quote }}
       }
     }
