--- a/charts/metrics-collector/0.0.2/templates/configmap.yaml
+++ b/charts/metrics-collector/0.0.2/templates/configmap.yaml
@@ -6,6 +6,6 @@ metadata:
   labels:
     "helm.sh/chart": "{{ .Chart.Name }}-{{ .Chart.Version }}"
 data:
-  hours: "{{ .Values.configmaps.query_params.hours | indent 2 }}"
-  refresh: "{{ .Values.configmaps.query_params.refresh | indent 2 }}"
+  hours: {{ .Values.configmaps.query_params.hours | quote | indent 2 }}
+  refresh: {{ .Values.configmaps.query_params.refresh | quote | indent 2 }}
 {{- end }}
